# eu-migration-forecast

./: .gitignore  LICENSE.md  README.md  client_secret.json  db_stuff.py  get_data.py  get_data_db.py  keywords2db.ipynb  keywords2db.py  logging.conf  process_data.py  process_data_db.py  process_migration_rates.py  process_registrations.py  pyproject.toml  requirements.txt  test_ads_api.py  test_trends_api.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
analysis/: analyze_correlation.ipynb  analyze_google_trends.ipynb  analyze_keyword_return.py  analyze_migration_rates.ipynb  analyze_yearly_correlation.ipynb  example_plot.py
analysis/data/: corr_pearson_-1y.xlsx  corr_pearson_1y.xlsx  data_HR.csv  data_SK.csv  non_zero_IE.xlsx
data/config/: country_names_eurostat.json  years_registrations.json
data/macroeconomics/: GDP_pc_quart.xls
data/migration_rates/: 2010.xls  2013.xls  2014.xlsx  2017.xlsx  countries.json
eumf_forecast/: get_data.py  process_data.py
eumf_forecast/analysis/: analyze_averaging.py  (+1 more)
keywords/: MigFor-Schlagwörter-Alle Sprachen22.02.21.xlsx
migration_rates/: 2008.xls  2009.xls  migration_rate_processed.csv  years.json
modules/: data.py  eumf_custom_models.py  eumf_data.py  eumf_db.py  eumf_eval.py  eumf_google_trends.py  eumf_pipeline.py  eval.py  evaluation.py
notebooks/: .style.yapf  anmeldungen_total.csv  model_dummy.ipynb  model_ensemble.ipynb  model_linreg.ipynb
postgres/: ddl.sql  docker-compose.yml  insert_base.sql
prototyping/: migration_rates.ipynb  predict_1y.ipynb  predict_3m.ipynb
(+405 files in other folders)
