[tool.poetry]
name = "eu-migration-forecast"
version = "0.1.0"
description = ""
authors = ["Nicholas Steinbrink <nicholas.steinbrink@bertelsmann-stiftung.de>"]
readme = "README.md"
packages = [{include = "eu_migration_forecast"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^2.0.3"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"
tqdm = "^4.65.0"
statsmodels = "^0.14.0"
xlrd = "^2.0.1"
openpyxl = "^3.1.2"
xgboost = "^1.7.5"
numpy = "^1.25.1"
jupyter = "^1.0.0"
numpyro = "^0.12.1"
pymc = "^5.6.1"
mlxtend = "^0.22.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipykernel = "^6.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
